# hopencl

./: HOpenCL.buildinfo.in  HOpenCL.cabal  README.md  Setup.hs  index.html  params.json
CLGLInterop/: CLGLInterop.cabal
CLGLInterop/Language/OpenCL/Host/: GLInterop.hs
CLGLInterop/examples/: CLGLExamples.cabal
CLGLInterop/examples/HCLRayTrace/: BaseTypes.h  BaseTypes.hsc  Device.hs  Main.hs  Render.hs  Scene.hs  SmallptHS.cabal  rendering_kernel.cl
CLGLInterop/examples/HCLRayTrace/scenes/: caustic.scn  caustic3.scn  complex.scn  cornell.scn  cornell_large.scn  simple.scn
CLGLInterop/examples/sinewave/: CLSlowPoints.hs  CLVBOPoints.hs  CPUVBOPoints.hs  Sinewave_Kernels.cl
Language/OpenCL/: Host.hs  Module.hs
Language/OpenCL/Host/: Constants.hs  Core.hs  FFI.hsc
examples/: CLExamples.cabal  CLUtil.hs  CLUtil2.hs  Module.hs  ParserQuote.hs  PrefixSum.hs  PrefixSuma.hs  Quote.hs  Tutorial1.hs  Tutorial1a.hs  Tutorial1b.hs  prefixSum_kernels.cl
