name: CLGLExamples
version: 0.0
license: AllRightsReserved
build-type: Simple
cabal-version: >= 1.2

executable CPUVBOPoints
  main-is: CPUVBOPoints.hs
  ghc-options: -threaded -main-is CPUVBOPoints.main -O2
  build-depends: base < 5, HOpenCL, CLGLInterop, OpenGL, GLUT, time, bytestring, array, bmp, mtl
  hs-source-dirs: sinewave

executable CLVBOPoints
  main-is: CLVBOPoints.hs
  ghc-options: -threaded -main-is CLVBOPoints.main -O2
  build-depends: base < 5, HOpenCL, CLGLInterop, OpenGL, GLUT, time, bytestring, array, bmp, mtl
  hs-source-dirs: sinewave

executable CLSlowPoints
  main-is: CLSlowPoints.hs
  ghc-options: -threaded -main-is CLSlowPoints.main -O2
  build-depends: base < 5, HOpenCL, CLGLInterop, OpenGL, GLUT, time, bytestring, array, bmp, mtl
  hs-source-dirs: sinewave

executable HCLRayTrace
  main-is: Main.hs
  build-depends: base < 5, HOpenCL, OpenGL, GLUT, CLGLInterop, random, time, mtl, array
  ghc-options: -threaded -O2
  build-tools: hsc2hs
  other-modules: BaseTypes, Device, Render, Scene
  hs-source-dirs: HCLRayTrace
  include-dirs: HCLRayTrace